Created the string directory with its CMakeLists file and linked it to the main CMakeLists file, as well as added the basic header and code files

--- a/tema1/src/CMakeLists.txt
+++ b/tema1/src/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(classes)
+project(my_string)
 
-add_executable(tema main.cpp)
+add_subdirectory(string)
+include_directories(string)
+
+add_executable(my_string main.cpp)
+
+target_link_libraries(my_string string)
