--- a/tema1/src/CMakeLists.txt
+++ b/tema1/src/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+set(CMAKE_CXX_FLAGS "-fno-elide-constructors")
+
 project(my_string)
 
 add_subdirectory(string)
