--- a/tema1/src/MorseCodeString/CMakeLists.txt
+++ b/tema1/src/MorseCodeString/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
 add_library(morsecodestring morsecodestring.cpp)
-target_link_libraries(morsecodestring string)
-target_include_directories(morsecodestring ../string/)
+target_link_libraries(morsecodestring PUBLIC string)
+target_include_directories(morsecodestring PUBLIC ../string/)
