--- a/tema1/src/CMakeLists.txt
+++ b/tema1/src/CMakeLists.txt
@@ -8,8 +8,9 @@ set(CMAKE_CXX_FLAGS "-fno-elide-constructors")
 project(my_string)
 
 add_subdirectory(string)
-include_directories(string)
+add_subdirectory(MorseCodeString)
+include_directories(string MorseCodeString)
 
 add_executable(my_string main.cpp)
 
-target_link_libraries(my_string string)
+target_link_libraries(my_string string morsecodestring)
