Modify the top-level CMakeLists file to use StringIntHashMap and LinkedList in the top project

--- a/tema3/src/CMakeLists.txt
+++ b/tema3/src/CMakeLists.txt
@@ -5,8 +5,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 project(word_analysis)
 add_subdirectory(TextLoader)
-include_directories(TextLoader)
+add_subdirectory(StringIntHashMap)
+add_subdirectory(LinkedList)
+include_directories(TextLoader LinkedList StringIntHashMap)
 
 add_executable(word_analysis main.cpp)
 find_package(Threads)
-target_link_libraries(word_analysis textloader Threads::Threads)
+target_link_libraries(word_analysis textloader Threads::Threads linkedlist stringinthashmap)
