Modify the CMakeLists file of the hashmap to allow it to use the linkedlist library

--- a/tema3/src/StringIntHashMap/CMakeLists.txt
+++ b/tema3/src/StringIntHashMap/CMakeLists.txt
@@ -1,2 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 add_library(stringinthashmap stringinthashmap.cpp)
+
+target_link_libraries(stringinthashmap PUBLIC linkedlist)
+target_include_directories(stringinthashmap PUBLIC ../LinkedList/)
